--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,28 @@
 * {
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  font-family:Arial, Helvetica, sans-serif
 }
 
 div {
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
   }
   
-  h1 {
-    font-family: Arial, 'Comic Sans MS', sans-serif;
+h1 {
     color: whitesmoke;
     background-color: brown;
     text-align: center;
   }
+.flex-container {
+  display: flex;
+}
+.flex-container div {
+  background: peachpuff;
+  border: 4px solid brown;
+  flex: 2;
+  margin: 4px;
+}
+
+img {
+  width: 400px;
+}
