--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,35 @@ h1 {
 .flex-container {
   display: flex;
 }
-.flex-container div {
+.flex-item {
   background: peachpuff;
-  border: 4px solid brown;
-  flex: 2;
+  border: 2px solid brown;
+  flex: 0 1 25%;
   margin: 4px;
+  padding: 8px;
+}
+.flex-container1 {
+  display: block;
+  background: peachpuff;
+  border: 2px solid brown;
+  flex: 0 1 25%;
+  margin: 4px;
+  padding: 2px;
+}
+.flex-item1 {
+  background: rgb(145, 214, 162);
+  border: 2px solid rgb(42, 165, 138);
+  margin: 2px;
+  padding: 8px;
+}
+.flex-item2 {
+  background: peachpuff;
+  border: 2px solid brown;
+  flex: 0 1 52%;
+  margin: 4px;
+  padding: 8px;
 }
 
 img {
-  width: 400px;
+  width: 150px;
 }
